fixed zoom link overflow issue

--- a/src/styles/session/SessionInformationHeader.scss
+++ b/src/styles/session/SessionInformationHeader.scss
@@ -397,7 +397,7 @@
         font-size: 14px;
       }
 
-      p {
+      .savedZoomText {
         width: 100%;
         height: 31px;
         background: #f3f5fc;
@@ -409,6 +409,8 @@
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
+        max-width: 33.33% !important;
+        flex-basis: 33.33% !important;
       }
 
       .CloseZoom {
